responsive spacing fixes

--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -5,11 +5,15 @@
 }
 
 header {
-    padding: 30px;
+    padding: 32px 16px;
     display: flex;
     align-items: center;
     justify-content: space-between;
     text-transform: uppercase;
+
+    @media screen and (min-width: 768px) {
+        padding: 32px;
+    }
 
     a {
         color: $color__primary;
@@ -41,7 +45,11 @@ header {
 
         a {
             font-weight: normal;
-            font-size: 1.3rem;
+            font-size: 1.2rem;
+
+            @media screen and (min-width: 768px) {
+                font-size: 1.3rem;
+            }
 
             &[aria-current="page"] {
                 opacity: 0.5;
