--- a/src/components/layout/layout.scss
+++ b/src/components/layout/layout.scss
@@ -3,7 +3,7 @@
 .outer-padding {
     margin: 0 16px;
 
-    @media screen and (min-width: 480px) {
+    @media screen and (min-width: 768px) {
         margin: 0 32px;
     }
 }
